featured product part

--- a/index.html
+++ b/index.html
@@ -920,6 +920,9 @@
         </div>
     </section>
 
+    <!-- -------------------recently part end here--------------- -->
+
+
     <!-- -------------------------brand start here-------------------- -->
 
     <section id="brand">
@@ -973,20 +976,159 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-
-
-
-
-
     
     <!-- -------------------------brand end here-------------------- -->
 
 
+    <!-- -------------------------Featured products start here--------------- -->
+
+    <section id="featured">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 featured__product">
+                    <div class=" featured__product_heading">
+                        <h2>Featured products</h2>
+                    </div>
+                    <div class="row  featured__product_main">
+                        <div class="col-lg-9 product__main_detail">
+                            <a href="#">Netbook Acer Travel B113-E-10072. </a>
+                            <div>
+                                <p>$2000</p>
+                                <h6>$1873</h6>
+                            </div>                            
+                        </div>
+                        <div class="col-lg-3 product__main_img">
+                            <a href="#">
+                                <img src="images/product-small-01.jpg" alt="img" class="img-fluid">
+                            </a>                            
+                        </div>
+                    </div>
+                    <div class="row  featured__product_main">
+                        <div class="col-lg-9 product__main_detail">
+                            <a href="#">PowerShot Elph 115 16MP Digital Camera</a>
+                            <div>
+                                <p>$2000</p>
+                                <h6>$1873</h6>
+                            </div>                            
+                        </div>
+                        <div class="col-lg-3 product__main_img">
+                            <a href="#">
+                                <img src="images/product-small-02.jpg" alt="img" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row  featured__product_main">
+                        <div class="col-lg-9 product__main_detail">
+                            <a href="#">PowerShot Elph 115 16MP Digital Camera </a>
+                            <div>
+                                <p>$2000</p>
+                                <h6>$1873</h6>
+                            </div>                            
+                        </div>
+                        <div class="col-lg-3 product__main_img">
+                            <a href="#">
+                                <img src="images/product-small-03.jpg" alt="img" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 featured__product">
+                    <div class=" featured__product_heading">
+                        <h2>On-Sale Products</h2>
+                    </div>
+                    <div class="row  featured__product_main">
+                        <div class="col-lg-9 product__main_detail">
+                            <a href="#">HP Scanner 2910P </a>
+                            <div>
+                                <p>$2000</p>
+                                <h6>$1873</h6>
+                            </div>                            
+                        </div>
+                        <div class="col-lg-3 product__main_img">
+                            <a href="#">
+                                <img src="images/product-small-04.jpg" alt="img" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row  featured__product_main">
+                        <div class="col-lg-9 product__main_detail">
+                            <a href="#">Galaxy Tab 3 GT-P5210 16GB, Wi-Fi, 10.1in - White</a>
+                            <div>
+                                <p>$2000</p>
+                                <h6>$1873</h6>
+                            </div>                            
+                        </div>
+                        <div class="col-lg-3 product__main_img">
+                            <a href="#">
+                                <img src="images/product-small-05.jpg" alt="img" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row  featured__product_main">
+                        <div class="col-lg-9 product__main_detail">
+                            <a href="#">PowerShot Elph 115 16MP Digital Camera </a>
+                            <div>
+                                <p>$2000</p>
+                                <h6>$1873</h6>
+                            </div>                            
+                        </div>
+                        <div class="col-lg-3 product__main_img">
+                            <a href="#">
+                                <img src="images/product-small-06.jpg" alt="img" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 featured__product">
+                    <div class=" featured__product_heading">
+                        <h2>Top Rated Products</h2>
+                    </div>
+                    <div class="row  featured__product_main">
+                        <div class="col-lg-9 product__main_detail">
+                            <a href="#">Galaxy Tab GT-P5210, 10" 16GB Wi-Fi </a>
+                            <div>
+                                <p>$2000</p>
+                                <h6>$1873</h6>
+                            </div>                            
+                        </div>
+                        <div class="col-lg-3 product__main_img">
+                            <a href="#">
+                                <img src="images/product-small-07.jpg" alt="img" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row  featured__product_main">
+                        <div class="col-lg-9 product__main_detail">
+                            <a href="#">PowerShot Elph 115 16MP Digital Camera</a>
+                            <div>
+                                <p>$2000</p>
+                                <h6>$1873</h6>
+                            </div>                            
+                        </div>
+                        <div class="col-lg-3 product__main_img">
+                            <a href="#">
+                                <img src="images/product-small-08.jpg" alt="img" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row  featured__product_main">
+                        <div class="col-lg-9 product__main_detail">
+                            <a href="#">Surface RT 64GB, Wi-Fi, 10.6in - Dark Titanium </a>
+                            <div>
+                                <p>$2000</p>
+                                <h6>$1873</h6>
+                            </div>                            
+                        </div>
+                        <div class="col-lg-3 product__main_img">
+                            <a href="#">
+                                <img src="images/product-small-09.jpg" alt="img" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
@@ -998,7 +1140,22 @@
 
 
 
-    <!-- -------------------recently part end here--------------- -->
+
+
+
+
+    <!-- -------------------------Featured products end here--------------- -->
+
+
+
+
+
+
+
+
+
+
+
 
 
 
