--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Electronic e-commerce</title>
     <!-- --------------fonts------------- -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1131,22 +1131,94 @@
     </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- -------------------------Featured products end here--------------- -->
 
+    <!-- ------------------------footer start here---------------------- -->
 
+    <section id="footer">
+        <div class="container">
+            <div class="row footer__wrapper">
+                <div class="col-lg-5 footer__logo_main">
+                    <div class="footer__logo">
+                        <img src="images/logo.png" alt="img" class="img-fluid">
+                    </div>
+                    <h2>Feel free to contact us via phone,email or just send us mail.</h2>
+                    <h3>17 Princess Road, London, Greater London NW1 8JR, UK 1-888-8MEDIA (1-888-892-9953) </h3>
+                    <p>Get in touch</p>
+                    <div class="footer__icon">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fa-brands fa-google-play"></i></a>
+                        <a href="#"><i class="fa-solid fa-basketball"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 footer__find">
+                    <h2>find it fast</h2>
+                    <ul>
+                        <li><a href="#">laptops & computers</a></li>
+                        <li><a href="#">Cameras & Photography</a></li>
+                        <li><a href="#">Smart Phones & Tablets</a></li>
+                        <li><a href="#">Video Games & Consoles</a></li>
+                        <li><a href="#">TV & Audio</a></li>
+                        <li><a href="#">Gadgets</a></li>
+                        <li><a href="#">Car Electronic & GPS</a></li>
+                        <li><a href="#">Accesories</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 footer__find">
+                    <h2>Information</h2>
+                    <ul>
+                        <li><a href="#">Find a Store</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Weekly Deals</a></li>
+                        <li><a href="#">Gift Cards</a></li>
+                        <li><a href="#">Recycling Program</a></li>
+                        <li><a href="#">Community</a></li>
+                        <li><a href="#">Careers</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 footer__find">
+                    <h2>find it fast</h2>
+                    <ul>
+                        <li><a href="#">My Account</a></li>
+                        <li><a href="#">Order Tracking</a></li>
+                        <li><a href="#">Wish List</a></li>
+                        <li><a href="#">Customer Service</a></li>
+                        <li><a href="#">Returns / Exchange</a></li>
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">Product Support</a></li>
+                        <li><a href="#">Extended Service Plans</a></li>
+                    </ul>
+                </div>
+                <div class="footer__search">
+                    <input type="text" placeholder="Subscribe to our newsletter">
+                    <div class="footer__btn">subscribe</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- ------------------------footer end here---------------------- -->
 
 
 
