about section addedd

--- a/index - 2.html
+++ b/index - 2.html
@@ -52,7 +52,7 @@
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">multi product</a></li>
-                                <li><a href="#">blog</a></li>
+                                <li><a href="./about.html">about us</a></li>
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">single_product_with_sidebar</a></li>
                                 <li><a href="#">blog</a></li>
@@ -916,21 +916,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-
     <!-- ------------------------banner end here------------ -->
 
 
@@ -1535,6 +1520,7 @@
     <!-- ------------------------coppy start here----------------- -->
 
 
+    
 
 
 
@@ -1543,12 +1529,54 @@
 
 
 
+    <!-- -----------------data colasp----------------- -->
+
+ 
+    <!-- <section>
+        <div class="conatiner">
+            <ul>
+                <li>
+                    <p>
+                        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample1">
+                          Button with data-bs-target
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapseExample1">
+                        <div class="card card-body">
+                          Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <p>
+                        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
+                          Button with data-bs-target
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapseExample2">
+                        <div class="card card-body">
+                          Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <p>
+                        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3">
+                          Button with data-bs-target
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapseExample3">
+                        <div class="card card-body">
+                          Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section> -->
 
 
-
-
-
-
+    <!-- -----------------data colasp----------------- -->
 
 
 
