--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">multi product</a></li>
-                                <li><a href="#">blog</a></li>
+                                <li><a href="./about.html">about us</a></li>
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">single_product_with_sidebar</a></li>
                                 <li><a href="#">blog</a></li>
