--- a/faq.html
+++ b/faq.html
@@ -190,137 +190,149 @@
 
     <!-- ---------------------shop-by start here---------------------- -->
 
-    <!-- -----------------who we are start here------------------------ -->
+    <!-- -------------------------Frequent start here------------------- -->
 
-    <section id="about-us">
+    <section id="frequent">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-8 about__detail">
-                    <h4>Who we are</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis diam erat. Duis velit lectus, posuere a blandit sit amet, tempor at lorem. Donec ultricies, lorem sed ultrices interdum. Leo metus luctus sem, vel vulputate diam ipsum sed lorem. Donec tempor arcu nisl, et molestie massa scelerisque ut. Nunc at rutrum leo. Mauris metus mauris, tristique quis sapien eu, rutrum vulputate enim. <br> <br>
-
-                        Mauris tempus erat laoreet turpis lobortis, eu tincidunt erat fermentum. Aliquam non tincidunt urna. Integer tincidunt nec nisl vitae ullamcorper. Proin sed ultrices erat. Praesent varius ultrices massa at faucibus. Aenean dignissim, orci sed faucibus pharetra, dui mi dignissim tortor, sit amet condimentum mi ligula sit amet augue.
-                    </p>
-                </div>
-                <div class="col-lg-4 about__img">
-                    <img src="images/about-1.jpg" alt="img" class="img-fluid">
-                    <h2>
-                        John Snow <span>CEO/Founder</span> 
-                    </h2>
-                </div>
+            <div class="frequent__heading">
+                <h2>Frequently Asked Questions</h2>
+                <p>Last Updated on July 14, 2014</p>
             </div>
-            <div class="row">
-                <div class="col-lg-8 about__detail">
-                    <h4>Our Goal and Idea</h4>
-                    <p>
-                        Donec libero dolor, tincidunt id laoreet vitae, ullamcorper eu tortor. Maecenas pellentesque, dui vitae iaculis mattis, tortor nisi faucibus magna, vitae ultrices lacus purus vitae metus. Ut nec odio facilisis, ultricies nunc eget, fringilla orci. Nulla lobortis sem dapibus, aliquet turpis eu, ornare neque. Sed nec sem diam. Mauris neque purus, malesuada at velit vel, tempus congue nisl. Ut aliquam semper augue hendrerit varius. Fusce pretium tempus volutpat. Vivamus dignissim posuere aliquet. In hac habitasse platea dictumst.
-                </div>
-                <div class="col-lg-4 about__img">
-                    <img src="images/about-2.jpg" alt="img" class="img-fluid">
-                    <h2>
-                        Smith John  <span>Support Staff</span> 
-                    </h2>
-                </div>
+            <div class="frequent__question">
+                <ul>
+                    <li>
+                        <p>
+                            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample1">
+                                Do you Ship Internationally ?
+                            </button>
+                        </p>
+                        <div class="collapse" id="collapseExample1">
+                            <div class="card card-body">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <p>
+                            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
+                                Who should I to contact if I have any queries?
+                            </button>
+                        </p>
+                        <div class="collapse" id="collapseExample2">
+                            <div class="card card-body">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <p>
+                            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3">
+                                How do I track my order ?
+                            </button>
+                        </p>
+                        <div class="collapse" id="collapseExample3">
+                            <div class="card card-body">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <p>
+                            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample4">
+                                How can I cancel or change my order ?
+                            </button>
+                        </p>
+                        <div class="collapse" id="collapseExample4">
+                            <div class="card card-body">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <p>
+                            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample5" aria-expanded="false" aria-controls="collapseExample5">
+                              how can i return a product?
+                            </button>
+                        </p>
+                        <div class="collapse" id="collapseExample5">
+                            <div class="card card-body">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <p>
+                            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample6" aria-expanded="false" aria-controls="collapseExample6">
+                              how long will it take to get my product
+                            </button>
+                        </p>
+                        <div class="collapse" id="collapseExample6">
+                            <div class="card card-body">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <p>
+                            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample7" aria-expanded="false" aria-controls="collapseExample7">
+                                What Shipping methods are available ?
+                            </button>
+                        </p>
+                        <div class="collapse" id="collapseExample7">
+                            <div class="card card-body">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
+                        </div>
+                    </li>
+                    <li>
+                        <p>
+                            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample8" aria-expanded="false" aria-controls="collapseExample8">
+                                Do you provide any warranty ?
+                            </button>
+                        </p>
+                        <div class="collapse" id="collapseExample8">
+                            <div class="card card-body">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
 
 
-   <!-- -----------------who we are end here------------------------ -->
-
-    <!-- --------------------what we do start here--------------------- -->
-
-    <section id="we-do">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 we-do__detail">
-                    <h4>What can we do for you ?</h4>
-                    <p>
-                        Donec libero dolor, tincidunt id laoreet vitae, ullamcorper eu tortor. Maecenas pellentesque, dui vitae iaculis mattis, tortor nisi faucibus magna, vitae ultrices lacus purus vitae metus.
-                    </p>
-                </div>
-                <div class="col-lg-3 we-do__content">
-                    <div class="content__service">
-                        <h4>Fast Delivery</h4>
-                        <p>
-                            Sed in mi rutrum, mattis eros ut, sagittis orci. Suspendisse vehicula auctor leo, nec egestas tellus fringilla ac integer.
-                        </p>
-                    </div>
-                    <div class="content__icon">
-                        <i class="fa-solid fa-truck"></i>
-                    </div>
-                </div>
-                <div class="col-lg-3 we-do__content">
-                    <div class="content__service">
-                        <h4>Support 24/7</h4>
-                        <p>
-                            Sed in mi rutrum, mattis eros ut, sagittis orci. Suspendisse vehicula auctor leo, nec egestas tellus fringilla ac integer.
-                        </p>
-                    </div>
-                    <div class="content__icon">
-                        <i class="fa-solid fa-futbol"></i>
-                    </div>
-                </div>
-                <div class="col-lg-3 we-do__content">
-                    <div class="content__service">
-                        <h4>Best Quality</h4>
-                        <p>
-                            Sed in mi rutrum, mattis eros ut, sagittis orci. Suspendisse vehicula auctor leo, nec egestas tellus fringilla ac integer.
-                        </p>
-                    </div>
-                    <div class="content__icon">
-                        <i class="fa-solid fa-star"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
 
-    <!-- --------------------what we do end here--------------------- -->
-
-    <!-- -------------------------btand start here--------------------- -->
-
-    <section id="brand_icon">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-2 brand__img">
-                    <a href="#">
-                        <img src="images/brand-01.jpg" alt="img" class="img-fluid">
-                    </a>                    
-                </div>
-                <div class="col-lg-2 brand__img">
-                    <a href="#">
-                        <img src="images/brand-02.jpg" alt="img" class="img-fluid">
-                    </a>                    
-                </div>
-                <div class="col-lg-2 brand__img">
-                    <a href="#">
-                        <img src="images/brand-03.jpg" alt="img" class="img-fluid">
-                    </a>                    
-                </div>
-                <div class="col-lg-2 brand__img">
-                    <a href="#">
-                        <img src="images/brand-04.jpg" alt="img" class="img-fluid">
-                    </a>                    
-                </div>
-                <div class="col-lg-2 brand__img">
-                    <a href="#">
-                        <img src="images/brand-02.jpg" alt="img" class="img-fluid">
-                    </a>                    
-                </div>
-                <div class="col-lg-2 brand__img">
-                    <a href="#">
-                        <img src="images/brand-03.jpg" alt="img" class="img-fluid">
-                    </a>                    
-                </div>
-            </div>
-        </div>
-    </section>
 
 
-    <!-- -------------------------btand end here--------------------- -->
+
+
+
+
+
+
+
+
+
+
+    <!-- -------------------------Frequent end here------------------- -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <!-- -------------------------Featured products start here--------------- -->
@@ -566,8 +578,6 @@
             </div>
         </div>
     </section>
-
-
 
 
     <!-- ------------------------coppy start here----------------- -->
