--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <li><a href="./about.html">about us</a></li>
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">single_product_with_sidebar</a></li>
-                                <li><a href="#">blog</a></li>
+                                <li><a href="./faq.html">FAQ</a></li>
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">blog</a></li>
                             </ul>
